Ganti Gambar Upcoming

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="kotak-flex">
                 <div class="kotak">
                     <div class="img-container">
-                        <img src="img/parallax1.png">
+                        <img src="img/upcoming1.png">
                     </div>
                     <div class="title-box">
                         <div class="band">Grauzig</div>
@@ -143,7 +143,7 @@
                 </div>
                 <div class="kotak">
                     <div class="img-container">
-                        <img src="img/parallax1.png">
+                        <img src="img/upcoming2.jpg">
                     </div>
                     <div class="title-box">
                         <div class="band">Seringai</div>
@@ -152,7 +152,7 @@
                 </div>
                 <div class="kotak">
                     <div class="img-container">
-                        <img src="img/parallax1.png">
+                        <img src="img/upcoming3.jpg">
                     </div>
                     <div class="title-box">
                         <div class="band">Kyle Patrick</div>
