Ganti Gambar Upcoming

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="kotak-flex">
                 <div class="kotak">
                     <div class="img-container">
-                        <img src="img/upcoming1.png">
+                        <img src="img/upcoming1.jpg">
                     </div>
                     <div class="title-box">
                         <div class="band">Grauzig</div>
